# solana-voting-dapp

./: .gitignore  .pre-commit-config.yaml  .typos.toml  Anchor.toml  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
codama/: voting.codama.json
docs/: dev.md  readme.md
mochawesome-report/: mochawesome.html  mochawesome.json
programs/voting/: Cargo.toml
programs/voting/src/: lib.rs
rust-client/: Cargo.toml
rust-client/examples/: add_candidate.rs  full_test.rs  initialize_poll.rs  verify_vote.rs  vote.rs
scripts/: generateAndTest.ts  run_full_test.ts  step1_initialize_poll.ts  step2_add_candidate.ts  step3_vote.ts  verify_vote.ts
solana-graph/solana-voting/: package.json  subgraph.yaml  substreams.spkg
tests/: voting.ts
voting-graph/: package.json  schema.graphql  substreams.spkg
voting-substreams/: generator.json
voting-substreams/voting_substreams/: Cargo.toml  output.jsonl  schema.sql  substreams.yaml
voting-substreams/voting_substreams/idls/: program.json
voting-substreams/voting_substreams/proto/: program.proto
voting-substreams/voting_substreams/pytools/: db_processor.py
voting-substreams/voting_substreams/src/: lib.rs
voting-substreams/voting_substreams/src/pb/: substreams.v1.program.rs
voting/solana-graph/solana-voting/: schema.graphql  subgraph.yaml
