[workspace]
members = ["programs/*", "rust-client", "voting-substreams/voting_substreams"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
# 优化等级设置为 "z"，代表“极致优化体积”
# "s" 是“优化体积”，"z" 比 "s" 更进一步
# opt-level = "z"
# 移除最终二进制文件中的所有符号信息，能显著减小体积
# strip = "symbols"
# 当程序遇到 panic 时，直接中止而不是展开堆栈，这能生成更小的代码
# panic = "abort"

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
