[package]
description = "Created with Anchor"
edition = "2021"
license = "MIT"
name = "voting"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
