[package]
edition = "2021"
license = "MIT"
name = "voting_substreams"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]
name = "substreams"

[dependencies]
anchor-lang = ">=0.31.0"
base64 = "0.22.1"
prost = "0.13"
prost-types = "0.13"
sologger_log_context = "0.1.2"
substreams = "0.6"
substreams-solana = "0.14"
substreams-solana-program-instructions = "0.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
